# docs/swagger.json
@@ -187,17 +187,11 @@
                         "schema": {
                             "$ref": "#/definitions/response.ResponseError"
                         }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/response.ResponseError"
-                        }
                     }
                 }
             }
         },
-        "/api/book/image/{id}": {
+        "/api/book/image/{path}": {
             "get": {
                 "consumes": [
                     "application/json"
@@ -210,9 +204,9 @@
                 ],
                 "parameters": [
                     {
-                        "type": "integer",
-                        "description": "Book ID",
-                        "name": "id",
+                        "type": "string",
+                        "description": "path",
+                        "name": "path",
                         "in": "path",
                         "required": true
                     }
@@ -247,7 +241,7 @@
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "Book ID",
+                        "description": "petugas ID",
                         "name": "id",
                         "in": "path",
                         "required": true
