# internal/controller/BookController.go
@@ -7,11 +7,12 @@ import (
 	"github.com/gofiber/fiber/v2"
 	"gorm.io/gorm"
 	"os"
+	"path/filepath"
 	"strconv"
 )
 
 const (
-	sampulPath = "E:\\UKK\\LoremLibrary\\storage\\app\\public\\sampul\\"
+	sampulPath = "C:\\Users\\fadlan\\Documents\\LoremLibrary\\LoremLibrary\\public\\storage\\sampul\\"
 )
 
 // BookIndex godoc
@@ -35,7 +36,7 @@ func BookIndex(c *fiber.Ctx) error {
 // @Tags Book
 // @Accept json
 // @Produce json
-// @Param id path int true "Book ID"
+// @Param id path int true "petugas ID"
 // @Success 200 {object} response.ResponseDataSuccess
 // @Failure 400 {object} response.ResponseError
 // @Router /api/book/{id} [get]
@@ -65,55 +66,66 @@ func BookDetail(c *fiber.Ctx) error {
 // @Success 200 {object} response.ResponseDataSuccess
 // @Failure 400 {object} response.ResponseError
 // @Failure 404 {object} response.ResponseError
-// @Failure 500 {object} response.ResponseError
 // @Router /api/book/category/{id} [get]
 func CategoryDetail(c *fiber.Ctx) error {
 	idParam := c.Params("id")
 
 	id, err := strconv.Atoi(idParam)
 	if err != nil {
-		return c.Status(400).JSON(fiber.Map{"status": "false", "message": err.Error()})
+		return c.Status(400).JSON(fiber.Map{"status": "false", "message": "ID harus berupa angka"})
 	}
 
-	var book models.Books
-	if err := config.DB.Preload("Book_Category").First(&book, id).Error; err != nil {
+	var books models.Books
+	if err := config.DB.First(&books, id).Error; err != nil {
 		if errors.Is(err, gorm.ErrRecordNotFound) {
-			return c.Status(404).JSON(fiber.Map{"status": "false", "message": "Data tidak ditemukan"})
+			return c.Status(404).JSON(fiber.Map{"status": "false", "message": "Data tidak di temukan"})
 		}
 		return c.Status(500).JSON(fiber.Map{"status": "false", "message": err.Error()})
 	}
 
-	// Menyiapkan array untuk menyimpan kategori buku
-	var categories []models.Categories
+	var bookCategory []models.Book_Category
 
-	// Memuat kategori buku menggunakan Preload dengan ManyToMany
-	if err := config.DB.Model(&book).Preload("Book_Category").Association("categories_id").Find(&categories); err != nil {
+	if err := config.DB.Find(&bookCategory, "books_id = ?", books.ID).Error; err != nil {
 		return c.Status(500).JSON(fiber.Map{"status": "false", "message": err.Error()})
 	}
 
-	return c.Status(200).JSON(fiber.Map{"status": "true", "message": "Berhasil mendapatkan data buku dan kategori", "data": categories})
+	var categoryIDs []int
+	for _, bc := range bookCategory {
+		categoryIDs = append(categoryIDs, int(bc.CategoriesID))
+	}
+
+	var categories []models.Categories
+	if err := config.DB.Where("id IN (?)", categoryIDs).Find(&categories).Error; err != nil {
+		return c.Status(500).JSON(fiber.Map{"status": "false", "message": err.Error()})
+	}
+
+	// Menggabungkan data buku dan kategori
+	bookWithCategories := struct {
+		Categories []models.Categories
+	}{
+		Categories: categories,
+	}
+
+	return c.Status(200).JSON(bookWithCategories)
 }
 
 // BookGetImage godoc
 // @Tags Book
 // @Accept json
 // @Produce json
-// @Param id path int true "Book ID"
+// @Param path path string true "path"
 // @Success 200 {object} response.ResponseDataSuccess
 // @Failure 400 {object} response.ResponseError
-// @Router /api/book/image/{id} [get]
+// @Router /api/book/image/{path} [get]
 func BookGetImage(c *fiber.Ctx) error {
-	idParam := c.Params("id")
+	path := c.Params("path")
 
-	var book models.Books
-	if err := config.DB.First(&book, idParam).Error; err != nil {
-		if errors.Is(err, gorm.ErrRecordNotFound) {
-			return c.Status(404).JSON(fiber.Map{"status": "false", "message": "Data tidak ditemukan"})
-		}
-		return c.Status(500).JSON(fiber.Map{"status": "false", "message": "Terjadi kesalahan dalam mengambil data buku"})
+	// Pastikan path gambar valid
+	if filepath.Ext(path) == "" {
+		return c.Status(400).JSON(fiber.Map{"status": "false", "message": "Path tidak valid"})
 	}
 
-	pathImage := sampulPath + book.Img
+	pathImage := filepath.Join(sampulPath, path)
 	if _, err := os.Stat(pathImage); os.IsNotExist(err) {
 		return c.Status(404).JSON(fiber.Map{"status": "false", "message": "Gambar tidak ditemukan"})
 	}
